--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -4,8 +4,36 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rotas Handlebars</title>
+    {{!-- <link rel="stylesheet" href="/stylesheet/styles.css"> --}}
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <body>
+    <header>
+        {{!-- <nav class="navbar">
+            <div class="navbar-brand">
+                <a href="/">Sistema Web</a>
+            </div>
+            <div class="links">
+                <a href="consultar">Consultar</a>
+                <a href="atualizar">Atualizar</a>
+            </div>
+        </nav> --}}
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+            <div class="container-fluid">
+                <ul class="navbar-nav">
+                    <li>
+                        <a class="navbar-brand" href="/">Sistema Web</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-decoration-none" href="cadastrar">Cadastrar</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="consultar">Consultar</a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+    </header>
     {{{body}}}
 </body>
 </html>
