--- a/views/cadastrar.handlebars
+++ b/views/cadastrar.handlebars
@@ -1,1 +1,20 @@
-<h1>Cadastrar</h1>
+<div>
+    <h3>Cadastrar - Agendamento de Potenciais Clientes</h3>
+    <h4>Sistema utilizado para agendamento de serviços</h4>
+    <br><br>
+    <form action="#" method="post">
+        <p>Nome:</p>
+        <input type="text" name="nome" id="nome" placeholder="Nome">
+        <br><br><p>Telefone:</p>
+        <input type="text" name="tel" id="tel" placeholder="Telefone">
+        <br><br><p>Origem:</p>
+        <input type="text" name="origem" id="origem" placeholder="Origem">
+        <br><br><p>Data do Contato:</p>
+        <input type="date" name="data" id="data" placeholder="mm/dd/aaaa">
+        <br><br><p>Observação:</p>
+        <textarea name="obs" id="obs" cols="30" rows="10"">Observação</textarea>
+        {{!-- <input type="textfield" name="obs" id="obs" placeholder="Observação"> --}}
+        <br><br>
+        <button type="submit">Cadastrar</button>
+    </form>
+</div>
