--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -4,22 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rotas Handlebars</title>
-    {{!-- <link rel="stylesheet" href="/stylesheet/styles.css"> --}}
+    <link rel="stylesheet" href="/stylesheet/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <body>
     <header>
-        {{!-- <nav class="navbar">
-            <div class="navbar-brand">
-                <a href="/">Sistema Web</a>
-            </div>
-            <div class="links">
-                <a href="consultar">Consultar</a>
-                <a href="atualizar">Atualizar</a>
-            </div>
-        </nav> --}}
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-            <div class="container-fluid">
+            <div class="container-fluid p-3">
                 <ul class="navbar-nav">
                     <li>
                         <a class="navbar-brand" href="/">Sistema Web</a>
@@ -34,6 +25,8 @@
             </div>
         </nav>
     </header>
+    <div class="p-4">
     {{{body}}}
+    </div>
 </body>
 </html>
