--- a/views/atualizar.handlebars
+++ b/views/atualizar.handlebars
@@ -1,24 +1,25 @@
 <div class="container">
     <br>
-    <h4>Cadastrar - Agendamento de Potenciais Clientes</h4>
-    <p>Sistema utilizado para agendamento de serviços.</p>
+    <h4>Atualizar - Agendamento de Potenciais Clientes</h4>
+    <p>Atualize as informação do agendamento:</p>
 
     <form>
         <div class="mb-3">
             <label for="exampleInputEmail1" class="form-label">Nome: </label>
-            <input type="text" class="form-control" id="nome" name="nome" aria-describedby="emailHelp">
+            <input type="email" class="form-control" id="nome" name="nome" aria-describedby="emailHelp">
         </div>
         
         <div class="mb-3">
             <label for="exampleInputEmail1" class="form-label">Telefone: </label>
-            <input type="tel" class="form-control" id="telefone" name="telefone" aria-describedby="emailHelp">
+            <input type="text" class="form-control" id="telefone" name="telefone" aria-describedby="emailHelp">
         </div>
 
         <div class="mb-3">
             <label for="exampleInputEmail1" class="form-label">Origem: </label>
-            <select class="form-select" name="origem" id="origem">
-                <option value="1">Celular</option>
-                <option value="2">Telefone</option>
+            <select class="form-select" aria-label="Default select example">
+                <option selected>Seleciona algumas das opções</option>
+                <option value="1">Telefone</option>
+                <option value="2">Celular</option>
             </select>
         </div>
 
