--- a/views/consultar.handlebars
+++ b/views/consultar.handlebars
@@ -1,1 +1,26 @@
-<h1>Consultar</h1>
+<div class="container">
+    <br>
+    <h4>Consultar - Agendamento de Potenciais Clientes</h4>
+    <p>Listagem dos agendamentos cadastrados:</p>
+
+    <table class="table text-center">
+        <thead style="background-color: #0d6efd" class="text-white">
+            <tr> 
+                <th>Nome</th>
+                <th>Telefone</th>
+                <th>Origem</th>
+                <th>Data do Contato</th>
+                <th>Observação</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+        </tbody>
+    </table>
+</div>
