--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -20,6 +20,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="consultar">Consultar</a>
                     </li>
+                    <li>
+                        <a class="nav-link" href="atualizar">Atualizar</a>
+                    </li>
                 </ul>
             </div>
         </nav>
